hphp/test/zend/good/ext/standard/tests/strings/money_format_variation2.php.skipif
<?php
	if (!function_exists('money_format')) {
		die("SKIP money_format - not supported\n");
	}
?>